# phxd

./: ProjectHome.md
client/: INSTALL  acconfig.h  configure  configure.in  makefile.in
client/README/: CHANGES  README  ReadMe.gtk  THANKS  ToDoList
client/doc/: Problems
client/include/: cicn.h  cipher.h  cipher_openssl.h  config.h.in  gtk_hlist.h  hfs.h  hotline.h  hx.h  macres.h  main.h  sha.h  xmalloc.h
client/run/: hxrc  hxvars
client/src/: Makefile.in  decode.c  hal.c  hlclient.c  hlwrite.c  hx_chat.c  hx_commands.c  hx_tty.c  hx_users.c  macres.c  main.c  version.c  xmmslib.c
client/src/cipher/: Makefile.in  cipher.c
client/src/compress/: Makefile.in  compress.c
client/src/gtk/: Makefile.in  about.c  cicn.c  gtk.c  hlist.c
client/src/hfs/: Makefile.in  hfs.c
client/src/hope/: Makefile.in  haval.c  hmac.c  rand.c  sha.c
phired/: INSTALL  LICENSE  Makefile.in  NEWS  config.h.in  configure  configure.in
phired/libwired/: config.h.in  config.m4  configure  configure.in
phired/libwired/libwired/: wired.h
phired/libwired/libwired/base/: wi-assert.c  wi-assert.h  wi-base.c  wi-base.h  wi-byteorder.c  wi-byteorder.h  wi-macros.h  wi-private.h  wi-runtime.c  wi-runtime.h  wi-version.c  wi-version.h
phired/libwired/libwired/collections/: wi-array.c  wi-array.h  wi-dictionary.c  wi-dictionary.h  wi-enumerator.c  wi-enumerator.h  wi-set.c  wi-set.h
phired/libwired/libwired/crypto/: wi-cipher.c  wi-cipher.h  wi-digest.c  wi-digest.h  wi-rsa.c  wi-rsa.h  wi-x509.c  wi-x509.h
phired/libwired/libwired/data/: wi-data.c  wi-data.h  wi-date.c  wi-date.h  wi-number.c  wi-number.h  wi-plist.c  wi-plist.h  wi-string.c  wi-string.h  wi-url.c  wi-url.h  wi-uuid.c  wi-uuid.h
phired/libwired/libwired/file/: wi-file.c  wi-file.h  wi-fs.c  wi-fs.h  wi-fsenumerator.c  wi-fsenumerator.h  wi-fsevents.c  wi-fsevents.h  wi-fts.c  wi-fts.h
phired/libwired/libwired/misc/: wi-config.c  wi-config.h  wi-error.c  wi-error.h  wi-pool.c  wi-pool.h  wi-random.c  wi-random.h  wi-regexp.c  wi-regexp.h  wi-settings.c  wi-settings.h  wi-test.c  wi-test.h  wi-xml.c  wi-xml.h
phired/libwired/libwired/net/: wi-address.c  wi-address.h  wi-host.c  wi-host.h  wi-ip.c  wi-ip.h  wi-socket.c  wi-socket.h  wi-speed-calculator.c  wi-speed-calculator.h  wi-wired.c  wi-wired.h
phired/libwired/libwired/p7/: wi-p7-message.c  wi-p7-message.h  wi-p7-private.c  wi-p7-private.h  wi-p7-socket.c  wi-p7-socket.h  wi-p7-spec.c  wi-p7-spec.h
phired/libwired/libwired/system/: wi-compat.c  wi-compat.h  wi-log.c  wi-log.h  wi-process.c  wi-process.h  wi-system.c  wi-system.h  wi-task.c  wi-task.h  wi-terminal.c  wi-terminal.h
phired/libwired/libwired/thread/: wi-lock.c  wi-lock.h  wi-thread.c  wi-thread.h  wi-timer.c  wi-timer.h
phired/libwired/p7/examples/: Makefile  wired.xml  wiredclient.c
phired/libwired/test/: test.c  test.h
phired/libwired/test/tests/: wi-crypto-tests.c  wi-fsevents-tests.c  wi-ip-tests.c  wi-number-tests.c  wi-p7-spec-tests.c  wi-plist-test.c  wi-runtime-tests.c  wi-set-tests.c  wi-string-tests.c  wi-timer-tests.c  wi-url-tests.c  wi-uuid-tests.c
phired/man/: wired.8  wired.conf.5  wiredctl.1
phired/run/: banlist  groups  users
phired/test/transfertest/: main.c
phired/wired/: accounts.c  accounts.h  banlist.c  banlist.h  chats.c  chats.h  commands.c  commands.h  files.c  files.h  main.c  main.h  news.c  news.h  server.c  server.h  settings.c  settings.h  trackers.c  trackers.h  transfers.c  transfers.h  users.c  users.h  version.c  version.h  wired.conf.in  wiredctl.in
server/: INSTALL  acconfig.h  configure  configure.in  makefile.in
server/README/: ABOUT  CHANGES  CONTRIBUTORS  KNOWN_ISSUES  TODO
server/cgi-bin/: README  WebStat_0.59.tgz
server/cgi-bin/netstat/: netstat.cgi  netstat.conf
server/doc/: Access  Banlist  Commands  Conf  HowTo  Problems  allow-deny  cipher
server/include/: chatbuf.h  commands.h  config.h.in  constants.h  hfs.h  hotline.h  htxf.h  llimits.h  main.h  rcv.h  transactions.h  version.h
server/include/apple/: alias.h  api.h  files.h  mac_errno.h  mac_string.h  unicode.h
server/include/cipher/: cipher.h  cipher_openssl.h
server/include/util/: string_m.h
server/rc/: README  hxd.rc
server/rorsch/: README  acctedit.c  bmfind.c  chatnums.txt  comment2cap.c  macbin.c  passwd  stress.c  tlist.c  treg.c
server/run/: README  hxd.conf  news
server/run/accounts/admin/: access  conf
server/run/accounts/guest/: UserData
server/run/etc/: banlist  hxd.sql  newuser  rmuser
server/run/etc/skel/: access
server/run/exec/: accounts  find  help  login  ls-exec  mail  netstat  seen  uname  uptime  whoami
server/src/: Makefile.in  accounts.c  chat.c  commands.c  fd.c  files.c  hlserver.c  hlwrite.c  htxf.c  hxd_config.c  ident.c  inet_aton.c  inet_ntoa_r.c  main.c  news.c  rcv.c  realpath.c  snprintf.c  string_m.c  tracker.c  transactions.c  version.c  xmalloc.c
server/src/apple/: Makefile.in  alias.c  files.c  mac_errno.c  mac_string.c  unicode.c
server/src/cipher/: Makefile.in  cipher.c
server/src/compress/: Makefile.in  compress.c
server/src/hfs/: Makefile.in  hfs.c
server/src/hope/: Makefile.in  haval.c  hmac.c  md5.c  rand.c  sha.c
server/src/sql/: Makefile  Makefile.in  sql.c
server/utils/: README  bashmkbin  getudbit.c  isalias.c  lgetudbit.c  makefile  mkbin  setudbit.c
tracker/: INSTALL  acconfig.h  configure  configure.in  makefile.in
tracker/README/: CHANGES  ToDo
tracker/include/: config.h.in  hotline.h  main.h  trx.h  version.h  xmalloc.h
tracker/run/etc/: client_banlist  custom_list  hxtrackd.conf  tracker_banlist
tracker/src/: Makefile.in  fd.c  hxd_config.c  inet_aton.c  localtime_r.c  main.c  snprintf.c  tracker.c  version.c  xmalloc.c
